syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "FunctionServerProto";

package FunctionServerProto;

service FunctionsService{
  rpc SpellBackwardsRpc (BasicRequest) returns (BasicReply);
  rpc GetSumRpc (BasicRequest) returns (BasicReply);
  rpc GetUserInfoRpc (UserRequest) returns (UserInfoReply);
}

message BasicRequest{
  string content = 1;
}
message BasicReply{
  string content = 1;
}
message UserRequest{
  string username = 1;
}
message UserInfoReply{
  string username = 1;
  repeated UserRole roles = 2;
}
message UserRole{
  string name = 1;
}



