syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "FunctionServerProto";

package FunctionServerProto;

service FunctionsService{
  rpc GetUserInfoRpc (UserRequest) returns (UserInfoReply);
  rpc ReturnUtcDate (google.protobuf.Empty) returns (BasicReply);
  rpc GetUserAllUsers (google.protobuf.Empty) returns (UserRepoReply);
  rpc ReturnCurrentTimestamp (google.protobuf.Empty) returns (google.protobuf.Timestamp);
}

message BasicRequest{
  string content = 1;
}
message BasicReply{
  string content = 1;
}
message UserRequest{
  string username = 1;
}
message UserInfoReply{
  string username = 1;
  repeated UserRole roles = 2;
  string emailaddress = 3;
  string dob = 4;
}
message UserRole{
  string name = 1;
}
message UserRepoReply{
  repeated UserInfoReply users = 1;
}



